--- a/sass/config/_vars.scss
+++ b/sass/config/_vars.scss
@@ -6,6 +6,7 @@ $white: 			#fff;
 $grey:		 		#999;
 $light-grey: 		#ddd;
 $orange:			#ff4f1a;
+$green: 			#008c00;
 
 // Fonts
 $font-stack: 'Museo Sans', sans-serif;
