--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,11 +7,19 @@
 @import "stylish-select";
 @import "base";
 @import "misc";
+@import "slick";
+@import "lightbox";
 @import "typography";
+@import "carousel/masterslider";
+@import "carousel/style";
+@import "carousel/ms-caro3d";
 @import "header/header";
 @import "slider/slider";
+@import "carousel";
 @import "main-nav";
+@import "breadcrumbs";
 @import "main";
+@import "single-item";
 @import "products-grid/products-grid";
 @import "contact-form";
 @import "footer/footer";
