--- a/sass/_stylish-select.scss
+++ b/sass/_stylish-select.scss
@@ -1,11 +1,11 @@
 /**
 * Stylish Select 0.4.9 - $ plugin to replace a select drop down box with a stylable unordered list
 * http://github.com/scottdarby/Stylish-Select/
-* 
+*
 * Copyright (c) 2009 Scott Darby
-* 
+*
 * Requires: jQuery 1.3 or newer
-* 
+*
 * Dual licensed under the MIT and GPL licenses.
 */
 
@@ -25,6 +25,10 @@
 	left:0;
 	z-index:2;
 	top:36px!important;
+
+	@include medium-up{
+		z-index: 11;
+	}
 }
 .stylish-select .SSContainerDivWrapper:before {
 	content: '';
@@ -148,4 +152,164 @@
 
 .stylish-select .newListOptionTitle li {
 	font-weight:normal;
+}
+
+
+
+// Bids number select field (Alt styling)
+.bids-num-outer .newListSelected {
+	width: 100%;
+
+	.selectedTxt{
+		background: #eee;
+		display: block;
+		width: 100%;
+		color: #333;
+		font-weight: 500;
+		font-size: 0.875rem;
+		text-align: center;
+		text-indent: -1.5em;
+		text-transform: inherit;
+		height: 40px;
+		line-height: 42px;
+		border: 1px solid #ddd;
+
+		&::first-letter{
+			font-weight: 700;
+		}
+
+		&:hover{
+			background-color: #e5e5e5;
+		}
+
+		&:before{
+			bottom: 0.75rem;
+			top: auto;
+			right: 1.125rem;
+
+			@include medium-up{
+				right: 0.625rem;
+			}
+
+			@include tablet-up{
+				right: 0.75rem;
+				bottom: 1.125rem;
+			}
+
+			@include desktop-up{
+				right: 1.5rem;
+				bottom: 1.275rem;
+			}
+		}
+
+		&:after{
+			content: '';
+			display: block;
+			position: absolute;
+			top: 0.75rem;
+			right: 1.125rem;
+			border-bottom: 2px solid $orange;
+			border-left: 2px solid $orange;
+
+			@include rotate(135deg);
+
+			@include medium-up{
+				right: 0.625rem;
+			}
+
+			@include tablet-up{
+				right: 0.75rem;
+				top: 1.125rem;
+			}
+
+			@include desktop-up{
+				right: 1.5rem;
+				top: 1.275rem;
+			}
+		}
+
+		&:before,
+		&:after {
+			width: 8px;
+			height: 8px;
+
+			@include tablet-up{
+				width: 10px;
+				height: 10px;
+				border-bottom-width: 3px;
+				border-left-width: 3px;
+			}
+
+			@include desktop-up{
+				width: 14px;
+				height: 14px;
+				border-bottom-width: 5px;
+				border-left-width: 5px;
+			}
+		}
+
+		@include medium-up{
+			font-size: 0.9375rem;
+		}
+
+		@include tablet-up{
+			height: 55px;
+			line-height: 57px;
+			font-size: 1rem;
+		}
+
+		@include desktop-up{
+			height: 70px;
+			line-height: 72px;
+			font-size: 1.5rem;
+		}
+	}
+
+	.SSContainerDivWrapper{
+		width: 100%;
+		top: 48px !important;
+
+		@include tablet-up{
+			top: 64px !important;
+		}
+
+		@include desktop-up{
+			top: 80px !important;
+		}
+
+		&:before{
+			left: auto;
+			right: 1.5rem;
+			border-bottom: 0.5rem solid #e5e5e5;
+			border-left: 0.5rem solid transparent;
+			border-right: 0.5rem solid transparent;
+		}
+	}
+
+	ul{
+		border: 1px solid #ddd;
+		background-color: #fff;
+	}
+
+	li{
+		display: block;
+		width: 100%;
+
+		a{
+			padding: 0.375rem 1rem;
+			font-size: 1rem;
+			color: #333;
+			background-color: #fff;
+			border-bottom: 1px solid #ddd;
+			text-transform: inherit;
+
+			&:hover{
+				background-color: #f5f5f5;
+			}
+
+			&.hiLite{
+				background-color: #f5f5f5;
+			}
+		}
+	}
 }
