--- a/sass/products-grid/_products-grid-item.scss
+++ b/sass/products-grid/_products-grid-item.scss
@@ -5,11 +5,13 @@ article{
 	margin-bottom: 1.25rem;
 	border-radius: 5px;
 	border-bottom: 3px solid darken($light-grey, 3%);
+	box-shadow: 0 0px 0px 0 rgba(0,0,0,0);
 
-	@include transition(all, 0.25s);
+	@include transition(background-color, 0.25s);
 
 	&:hover{
 		background: $white;
+		box-shadow: 0 5px 16px 0 rgba(0,0,0,0.25);
 	}
 
 	.thumbnail{
@@ -41,7 +43,7 @@ article{
 			height: 20px;
 			line-height: 20px;
 			position: absolute;
-			top: -20px;
+			top: -40px;
 			right: 0;
 			text-align: center;
 			background-color: $orange;
@@ -67,7 +69,7 @@ article{
 		text-transform: uppercase;
 		color: $white;
 		font-weight: 700;
-		padding: 3px 8px;
+		padding: 5px 8px;
 		background-color: rgba(0,0,0,0.65);
 		width: 175px;
 		top: 50%;
@@ -76,9 +78,40 @@ article{
 		transform: translateY(-50%) scale(1);
 		opacity: 1;
 
-		@include transition(all, 0.3s);
+		@include transition(all, 0.2s);
 
-		.timer{
+		@include phone-up{
+			font-size: 20px;
+			width: 200px;
+		}
+
+		@include medium-up{
+			font-size: 13px;
+			width: auto;
+			display: table;
+		}
+
+		@include tablet-up{
+			font-size: 16px;
+			padding: 5px 8px;
+			width: 175px;
+			display: block;
+		}
+
+		&.has-counter,
+		&.ended{
+			white-space: nowrap;
+			width: auto;
+			display: table;
+			margin-left: 50%;
+			-webkit-transform: translateX(-50%) translateY(-50%) scale(1);
+			-moz-transform: translate(-50%) translateY(-50%) scale(1);
+			-ms-transform: translate(-50%) translateY(-50%) scale(1);
+			transform: translate(-50%) translateY(-50%) scale(1);
+		}
+
+		.timer,
+		.counter{
 			color: $orange;
 			display: inline-block;
 
@@ -134,9 +167,10 @@ article{
 			font-size: 1rem;
 			font-weight: 700;
 
-			@include tablet-up{
+			@include medium-up{
 				font-size: 1.125rem;
 			}
+
 			@include tablet-up{
 				font-size: 1.5rem;
 			}
@@ -145,9 +179,10 @@ article{
 		p{
 			font-size: 0.825rem;
 
-			@include tablet-up{
+			@include medium-up{
 				font-size: 0.875rem;
 			}
+
 			@include tablet-up{
 				font-size: 0.9375rem;
 			}
