--- a/sass/config/_vars.scss
+++ b/sass/config/_vars.scss
@@ -7,6 +7,7 @@ $grey:		 		#999;
 $light-grey: 		#ddd;
 $orange:			#ff4f1a;
 $green: 			#008c00;
+$red: 				#b20000;
 
 // Fonts
 $font-stack: 'Museo Sans', sans-serif;
