--- a/sass/_contact-form.scss
+++ b/sass/_contact-form.scss
@@ -10,7 +10,7 @@
 		border-bottom: 3px solid darken($light-grey, 3%);
 
 		@include transition(all, 0.25s);
-		
+
 		@include medium-up{
 			margin-bottom: 2rem;
 		}
@@ -35,13 +35,18 @@
 
 			@include tablet-up{
 				font-size: 0.9375rem;
-			}	
+			}
 		}
 
 		input, .button{
 			@include medium-up{
 				margin: 0;
-			}	
+			}
 		}
-	}	
-}	
+
+		input,
+		input:focus{
+			background-color: #fff;
+		}
+	}
+}
