--- a/sass/_single-item.scss
+++ b/sass/_single-item.scss
@@ -33,7 +33,7 @@
 			position: relative;
 			margin-bottom: 1.5rem;
 			display: block;
-			border-bottom: 7px solid #ccc;
+			border-bottom: 7px solid #eee;
 
 			h1{
 				display: block;
@@ -47,7 +47,7 @@
 					width: 100%;
 					display: block;
 					position: absolute;
-					bottom: -0.875rem;
+					bottom: -0.825rem;
 					background: $orange;
 
 					-webkit-animation: 	ribbonWidth 1s ease-in-out 0.5s both;
@@ -56,8 +56,8 @@
 					animation: 			ribbonWidth 1s ease-in-out 0.5s both;
 
 					@include transition(all, 0.25s);
-				}	
-			}	
+				}
+			}
 		}
 
 		.item-images{
@@ -66,7 +66,7 @@
 
 		.item-desc{
 			position: relative;
-			
+
 			h3{
 				font-size: 1rem;
 				font-weight: 700;
@@ -81,7 +81,7 @@
 					font-size: 1.5rem;
 				}
 			}
-			
+
 			p{
 				font-weight: 500;
 				font-size: 0.825rem;
@@ -90,7 +90,7 @@
 				@include medium-up{
 					font-size: 0.875rem;
 				}
-				
+
 				@include tablet-up{
 					font-size: 0.9375rem;
 				}
@@ -115,7 +115,7 @@
 			}
 
 			@include tablet-up{
-				margin-bottom: 0.75rem;		
+				margin-bottom: 0.75rem;
 			}
 		}
 
@@ -176,18 +176,180 @@
 		}
 	}
 
-	.button{
+	p{
+		font-size: 14px;
+		color: #777;
 
 		@include tablet-up{
-			height: 55px;
-			line-height: 57px;
 			font-size: 1rem;
+		}
+	}
+}
+
+
+.steps{
+	list-style: none;
+	float: right;
+	position: relative;
+
+	@include medium-up{
+		top: 4px;
+	}
+
+	@include tablet-up{
+		margin-right: 10px;
+	}
+
+	li{
+		display: inline-block;
+		line-height: 21px;
+		position: relative;
+		padding-left: 20px;
+		margin-left: 10px;
+		width: 20px;
+		height: 21px;
+		font-size: 14px;
+		white-space: nowrap;
+		overflow: hidden;
+
+		@include phone-up{
+			width: 26px;
+			height: 26px;
+			line-height: 28px;
+			padding-left: 26px;
+		}
+
+		@include medium-up{
+			width: auto;
+			padding-left: 34px;
+		}
+
+		@include tablet-up{
+			height: 30px;
+			font-size: 1rem;
+			line-height: 32px;
+			margin-left: 18px;
+			padding-left: 40px;
 		}
 
 		@include desktop-up{
-			height: 70px;
-			line-height: 72px;
-			font-size: 1.5rem;
+			height: 36px;
+			line-height: 38px;
+			margin-left: 20px;
+			padding-left: 45px;
+		}
+
+		&:first-child{
+			margin-left: 0;
+		}
+
+		&:before{
+			content: '';
+			width: 20px;
+			height: 20px;
+			display: block;
+			position: absolute;
+			left: 0px;
+			top: 1px;
+			background-color: #eee;
+			border-radius: 50%;
+			overflow: hidden;
+
+			@include phone-up{
+				width: 25px;
+				height: 25px;
+			}
+
+			@include tablet-up{
+				width: 30px;
+				height: 30px;
+				top: 0px;
+			}
+
+			@include desktop-up{
+				width: 35px;
+				height: 35px;
+				top: 0px;
+			}
+		}
+
+		&:after{
+			color: #333;
+			display: block;
+			text-indent: 0%;
+			position: absolute;
+			left: 0;
+			top: 0;
+			font-size: 13px;
+			line-height: 22px;
+			width: 20px;
+			text-align: center;
+
+			@include phone-up{
+				line-height: 27px;
+				font-size: 14px;
+				font-weight: 700;
+				width: 25px;
+			}
+
+			@include tablet-up{
+				line-height: 30px;
+				font-size: 1rem;
+				width: 30px;
+			}
+
+			@include desktop-up{
+				line-height: 36px;
+				width: 35px;
+			}
+		}
+
+		&:nth-child(1):after{ content: '1'}
+		&:nth-child(2):after{ content: '2'}
+		&:nth-child(3):after{ content: '3'}
+		&:nth-child(4):after{ content: '4'}
+		&:nth-child(5):after{ content: '5'}
+
+		&.done{
+			color: #777;
+
+			&:after{
+				content: '';
+				width: 9px;
+				height: 6px;
+				display: block;
+				text-indent: 100%;
+				border-bottom: 2px solid $orange;
+				border-left: 2px solid $orange;
+				position: absolute;
+				left: 6px;
+				top: 7px;
+
+				@include rotate(-45deg);
+
+				@include phone-up{
+					width: 12px;
+					height: 8px;
+					top: 8px;
+					left: 7px;
+					border-bottom-width: 3px;
+					border-left-width: 3px;
+				}
+
+				@include tablet-up{
+					width: 14px;
+					height: 9px;
+					top: 9px;
+					left: 8px;
+				}
+
+				@include desktop-up{
+					width: 17px;
+					height: 11px;
+					top: 10px;
+					left: 10px;
+				}
+			}
 		}
 	}
 }
