--- a/css/style.css
+++ b/css/style.css
@@ -3979,15 +3979,15 @@ th.hide-for-touch {
   padding: 0.375rem 1rem;
   font-size: 1rem;
   color: #333;
-  background-color: #fff;
-  border-bottom: 1px solid #ddd;
+  background-color: #eee;
   text-transform: inherit;
-}
-.bids-num-outer .newListSelected li a:hover {
-  background-color: #f5f5f5;
+  border-bottom: 1px solid #e5e5e5;
 }
 .bids-num-outer .newListSelected li a.hiLite {
-  background-color: #f5f5f5;
+  background-color: #e5e5e5;
+}
+.bids-num-outer .newListSelected li a.newListHover {
+  background-color: #e1e1e1;
 }
 
 .stylish-select .sSelect {
@@ -4037,6 +4037,7 @@ th.hide-for-touch {
   border-bottom: none;
 }
 .stylish-select .sSelect .SSContainerDivWrapper a {
+  background-color: #eee;
   color: #333;
   padding: 0 1rem;
   border-bottom: 1px solid #e5e5e5;
@@ -4165,7 +4166,7 @@ hr, .hr {
 
 .button {
   color: #fff;
-  font-size: 0.75rem;
+  font-size: 0.9375rem;
   display: inline-block;
   position: relative;
   text-transform: uppercase;
@@ -4189,6 +4190,11 @@ hr, .hr {
   width: 100%;
   padding: 0 0.5rem;
 }
+.button.center {
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+}
 @media (min-width: 768px) {
   .button.large {
     height: 55px;
@@ -4201,6 +4207,19 @@ hr, .hr {
     height: 70px;
     line-height: 72px;
     font-size: 1.5rem;
+  }
+}
+.button.close {
+  padding: 0 1rem;
+}
+@media (min-width: 640px) {
+  .button.close {
+    padding: 0 1.5rem;
+  }
+}
+@media (min-width: 768px) {
+  .button.close {
+    padding: 0 2rem;
   }
 }
 .button:hover, .button:active, .button:focus {
@@ -4239,7 +4258,7 @@ form {
 form button.button {
   line-height: 42px;
   height: 40px;
-  font-size: 1rem;
+  font-size: 0.9375rem;
   padding: 0 2rem;
 }
 form input[type="text"],
@@ -4438,9 +4457,9 @@ form .field.not-valid .error {
   max-width: 15rem;
   z-index: 1;
   color: #fff;
-  background-color: rgba(0, 0, 0, 0.85);
+  background-color: rgba(0, 0, 0, 0.8);
   position: absolute;
-  left: 106%;
+  left: 105%;
   top: 50%;
   opacity: 0;
   visibility: hidden;
@@ -4466,11 +4485,29 @@ form .field.not-valid .error:before {
   top: 50%;
   right: 100%;
   border: 10px solid transparent;
-  border-right: 10px solid rgba(0, 0, 0, 0.85);
+  border-right: 10px solid rgba(0, 0, 0, 0.8);
   -webkit-transform: translate3d(0, -50%, 0);
   -moz-transform: translate3d(0, -50%, 0);
   -ms-transform: translate3d(0, -50%, 0);
   transform: translate3d(0, -50%, 0);
+}
+@media (max-width: 640px) {
+  form .field.not-valid .error {
+    position: relative;
+    opacity: 1;
+    visibility: visible;
+    left: 0;
+    top: 0;
+    border-radius: 0 0 5px 5px;
+    max-width: 100%;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  form .field.not-valid .error:before {
+    display: none;
+  }
 }
 form .field.not-valid:hover .error {
   left: 104%;
@@ -4480,6 +4517,24 @@ form .field.not-valid:hover .error {
   -moz-transform: translate3d(0, -50%, 0);
   -ms-transform: translate3d(0, -50%, 0);
   transform: translate3d(0, -50%, 0);
+}
+@media (max-width: 640px) {
+  form .field.not-valid:hover .error {
+    position: relative;
+    opacity: 1;
+    visibility: visible;
+    left: 0;
+    top: 0;
+    border-radius: 0 0 5px 5px;
+    max-width: 100%;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  form .field.not-valid:hover .error:before {
+    display: none;
+  }
 }
 form .field input {
   margin-bottom: 0;
@@ -4541,6 +4596,220 @@ form .field input {
 
 .last-one:before {
   content: 'last one';
+}
+
+/* === Modal box === */
+.modal-box {
+  display: table;
+  position: fixed;
+  max-width: 94%;
+  padding: 2rem;
+  margin: 0 auto;
+  top: 45%;
+  left: 0;
+  right: 0;
+  color: #000;
+  background: #fff;
+  border-radius: 5px;
+  border-bottom: 4px solid #ccc;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  visibility: hidden;
+  z-index: 1000;
+  -webkit-transform: translateY(-100%) scale(0.5);
+  -moz-transform: translateY(-100%) scale(0.5);
+  -ms-transform: translateY(-100%) scale(0.5);
+  transform: translateY(-100%) scale(0.5);
+  -webkit-transition: opacity 0.25s ease, visibility 0.25s ease, transform 0.25s ease;
+  -moz-transition: opacity 0.25s ease, visibility 0.25s ease, transform 0.25s ease;
+  -ms-transition: opacity 0.25s ease, visibility 0.25s ease, transform 0.25s ease;
+  transition: opacity 0.25s ease, visibility 0.25s ease, transform 0.25s ease;
+}
+.modal-box.active {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transform: translateY(-50%) scale(1);
+  -moz-transform: translateY(-50%) scale(1);
+  -ms-transform: translateY(-50%) scale(1);
+  transform: translateY(-50%) scale(1);
+  -webkit-transition: opacity 0.25s ease, visibility 0.25s ease, transform 0.25s ease;
+  -moz-transition: opacity 0.25s ease, visibility 0.25s ease, transform 0.25s ease;
+  -ms-transition: opacity 0.25s ease, visibility 0.25s ease, transform 0.25s ease;
+  transition: opacity 0.25s ease, visibility 0.25s ease, transform 0.25s ease;
+}
+@media (min-width: 640px) {
+  .modal-box {
+    padding: 2.5rem;
+  }
+}
+@media (min-width: 768px) {
+  .modal-box {
+    padding: 2.5rem 3rem;
+  }
+}
+@media (min-width: 1024px) {
+  .modal-box {
+    padding: 3rem 4rem;
+  }
+}
+.modal-box .modal-close {
+  font-size: 35px;
+  font-weight: 400;
+  font-family: arial;
+  line-height: 1em;
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  height: 35px;
+  width: 35px;
+  text-align: center;
+  color: #777;
+  text-decoration: none;
+  z-index: 1;
+}
+.modal-box.no-close-btn .modal-close {
+  display: none;
+}
+.modal-box h3 {
+  font-size: 1.25rem;
+}
+@media (min-width: 640px) {
+  .modal-box h3 {
+    font-size: 1.5rem;
+  }
+}
+@media (min-width: 768px) {
+  .modal-box h3 {
+    font-size: 1.75rem;
+  }
+}
+@media (min-width: 1024px) {
+  .modal-box h3 {
+    font-size: 2rem;
+  }
+}
+.modal-box p {
+  color: #777;
+}
+.modal-box p:last-child {
+  margin-bottom: 0;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8) !important;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  visibility: hidden;
+  -webkit-transition: opacity 0.25s ease-in-out, visibility 0.25s ease-in-out;
+  -moz-transition: opacity 0.25s ease-in-out, visibility 0.25s ease-in-out;
+  -ms-transition: opacity 0.25s ease-in-out, visibility 0.25s ease-in-out;
+  transition: opacity 0.25s ease-in-out, visibility 0.25s ease-in-out;
+}
+.modal-overlay.active {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transition: opacity 0.25s ease-in-out, visibility 0.25s ease-in-out;
+  -moz-transition: opacity 0.25s ease-in-out, visibility 0.25s ease-in-out;
+  -ms-transition: opacity 0.25s ease-in-out, visibility 0.25s ease-in-out;
+  transition: opacity 0.25s ease-in-out, visibility 0.25s ease-in-out;
+}
+
+.icon-success,
+.icon-error {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  display: block;
+  position: relative;
+  margin: 0 auto 1rem;
+  background: #eee;
+  box-shadow: 0 0 0 1px #e5e5e5;
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  -ms-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+.icon-success:before, .icon-success:after,
+.icon-error:before,
+.icon-error:after {
+  content: '';
+  position: absolute;
+  display: block;
+}
+@media (min-width: 640px) {
+  .icon-success,
+  .icon-error {
+    width: 4rem;
+    height: 4rem;
+    margin-bottom: 1.5rem;
+  }
+}
+
+.icon-success:before {
+  width: 25px;
+  height: 15px;
+  top: 14px;
+  left: 12px;
+  border-left: 4px solid #008c00;
+  border-bottom: 4px solid #008c00;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  -ms-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+@media (min-width: 640px) {
+  .icon-success:before {
+    width: 33px;
+    height: 20px;
+    top: 20px;
+    left: 16px;
+    border-left-width: 5px;
+    border-bottom-width: 5px;
+  }
+}
+
+.icon-error:before, .icon-error:after {
+  width: 28px;
+  height: 4px;
+  top: 22px;
+  left: 10px;
+  background-color: #b20000;
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  -ms-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+@media (min-width: 640px) {
+  .icon-error:before, .icon-error:after {
+    width: 35px;
+    height: 5px;
+    top: 30px;
+    left: 15px;
+  }
+}
+.icon-error:before {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+.icon-error:after {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 /* Slider */
@@ -5965,6 +6234,9 @@ header .mm-trigger:before {
     padding-bottom: 100px;
   }
 }
+.main-carousel .button {
+  font-size: 0.75rem;
+}
 
 .main-nav {
   position: fixed;
@@ -6751,6 +7023,7 @@ main {
 }
 .products-grid .header .button {
   float: right;
+  font-size: 0.75rem;
 }
 @media (max-width: 479px) {
   .products-grid .header .button {
@@ -6979,6 +7252,7 @@ main {
 .products-grid article .item-content .button {
   padding: 0.85rem 0.125rem;
   line-height: 1em;
+  font-size: 0.75rem;
 }
 .products-grid article .item-content .columns span {
   height: 40px;
@@ -7042,6 +7316,9 @@ main {
   .contact-form form input, .contact-form form .button {
     margin: 0;
   }
+}
+.contact-form form .button {
+  font-size: 0.75rem;
 }
 .contact-form form input,
 .contact-form form input:focus {
