--- a/sass/_misc.scss
+++ b/sass/_misc.scss
@@ -60,7 +60,7 @@ hr, .hr{
 
 .button{
 	color: $white;
-	font-size: 0.75rem;
+	font-size: 0.9375rem;
 	display: inline-block;
 	position: relative;
 	text-transform: uppercase;
@@ -81,6 +81,12 @@ hr, .hr{
 		padding: 0 0.5rem;
 	}
 
+	&.center{
+		margin-right: auto;
+		margin-left: auto;
+		text-align: center;
+	}
+
 	&.large{
 
 		@include tablet-up{
@@ -93,6 +99,17 @@ hr, .hr{
 			height: 70px;
 			line-height: 72px;
 			font-size: 1.5rem;
+		}
+	}
+
+	&.close{
+		padding: 0 1rem;
+
+		@include medium-up{
+			padding: 0 1.5rem;
+		}
+		@include tablet-up{
+			padding: 0 2rem;
 		}
 	}
 
@@ -128,7 +145,7 @@ form{
 	button.button{
 		line-height: 42px;
 		height: 40px;
-		font-size: 1rem;
+		font-size: 0.9375rem;
 		padding: 0 2rem;
 	}
 
@@ -337,9 +354,9 @@ form{
 				max-width: 15rem;
 				z-index: 1;
 				color: $white;
-				background-color: rgba(0,0,0,0.85);
+				background-color: rgba(0,0,0,0.8);
 				position: absolute;
-				left: 106%;
+				left: 105%;
 				top: 50%;
 				opacity: 0;
 				visibility: hidden;
@@ -364,9 +381,25 @@ form{
 					top: 50%;
 					right: 100%;
 					border: 10px solid transparent;
-					border-right: 10px solid rgba(0,0,0,0.85);
+					border-right: 10px solid rgba(0,0,0,0.8);
 
 					@include translate(0,-50%,0);
+				}
+				
+				@include up-to-medium{
+					position: relative;
+					opacity: 1;
+					visibility: visible;
+					left: 0;
+					top: 0;
+					border-radius: 0 0 5px 5px;
+					max-width: 100%;
+
+					@include translate(0,0,0);
+
+					&:before{
+						display: none;
+					}
 				}
 			}
 
@@ -375,6 +408,22 @@ form{
 				opacity: 1;
 				visibility: visible;
 				@include translate(0,-50%,0);
+
+				@include up-to-medium{
+					position: relative;
+					opacity: 1;
+					visibility: visible;
+					left: 0;
+					top: 0;
+					border-radius: 0 0 5px 5px;
+					max-width: 100%;
+
+					@include translate(0,0,0);
+
+					&:before{
+						display: none;
+					}
+				}	
 			}
 		}
 
@@ -439,4 +488,209 @@ form{
 }
 .last-one:before{
 	content: 'last one';
+}
+
+
+
+/* === Modal box === */
+.modal-box {
+	display: table;
+	position: fixed;
+	max-width: 94%;
+	padding: 2rem;
+	margin: 0 auto;
+	top: 45%;
+	left: 0;
+	right: 0;
+	color: #000;
+	background: #fff;
+	border-radius: 5px;
+	border-bottom: 4px solid #ccc;
+	opacity: 0;
+	filter: alpha(opacity=0);
+	visibility: hidden;
+	z-index: 1000;
+
+	-webkit-transform:  translateY(-100%) scale(0.5);
+	-moz-transform:     translateY(-100%) scale(0.5);
+	-ms-transform:      translateY(-100%) scale(0.5);
+	transform:          translateY(-100%) scale(0.5);
+
+	-webkit-transition: opacity 0.25s ease, visibility 0.25s ease, transform 0.25s ease;
+	-moz-transition:    opacity 0.25s ease, visibility 0.25s ease, transform 0.25s ease;
+	-ms-transition:     opacity 0.25s ease, visibility 0.25s ease, transform 0.25s ease;
+	transition:         opacity 0.25s ease, visibility 0.25s ease, transform 0.25s ease;
+	
+	&.active{
+		opacity: 1;
+		visibility: visible;
+
+		-webkit-transform:  translateY(-50%) scale(1);
+		-moz-transform:     translateY(-50%) scale(1);
+		-ms-transform:      translateY(-50%) scale(1);
+		transform:          translateY(-50%) scale(1);
+
+		-webkit-transition: opacity 0.25s ease, visibility 0.25s ease, transform 0.25s ease;
+		-moz-transition:    opacity 0.25s ease, visibility 0.25s ease, transform 0.25s ease;
+		-ms-transition:     opacity 0.25s ease, visibility 0.25s ease, transform 0.25s ease;
+		transition:         opacity 0.25s ease, visibility 0.25s ease, transform 0.25s ease;
+	}
+
+	@include medium-up{
+		padding: 2.5rem;
+	}
+
+	@include tablet-up{
+		padding: 2.5rem 3rem;
+	}
+
+	@include desktop-up{
+		padding: 3rem 4rem;
+	}
+
+	.modal-close{
+		font-size: 35px;
+		font-weight: 400;
+		font-family: arial;
+		line-height: 1em;
+		position: absolute;
+		right: 1rem;
+		top: 1rem;
+		height: 35px;
+		width: 35px;
+		text-align: center;
+		color: #777;
+		text-decoration: none;
+		z-index: 1;
+	}
+
+	&.no-close-btn{
+		.modal-close{
+			display: none;
+		}
+	}
+
+	h3{
+		font-size: 1.25rem;
+		
+		@include medium-up{
+			font-size: 1.5rem;
+		}
+		@include tablet-up{
+			font-size: 1.75rem;
+		}
+		@include desktop-up{
+			font-size: 2rem;
+		}
+	}
+	
+	p{
+		color: #777;
+
+		&:last-child{
+			margin-bottom: 0;
+		}
+	}
+}	
+
+.modal-overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	z-index: 999;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,0.8) !important;
+	opacity: 0;
+	filter: alpha(opacity=0);
+	visibility: hidden;
+
+	@include opacity;
+
+	&.active{
+		opacity: 1;
+		visibility: visible;
+		@include opacity;
+	}
+}
+
+// Icons
+.icon-success,
+.icon-error{
+	width: 3rem;
+	height: 3rem;
+	border-radius: 50%;
+	display: block;
+	position: relative;
+	margin: 0 auto 1rem;
+	background: #eee;
+	box-shadow: 0 0 0 1px #e5e5e5;
+	
+	&:before,
+	&:after{
+		content: '';
+		position: absolute;
+		display: block;
+	}
+	
+	@include transition(all, 0.25s);
+
+	@include medium-up{
+		width: 4rem;
+		height: 4rem;
+		margin-bottom: 1.5rem;
+	}
+}
+
+.icon-success{
+	&:before{
+		width: 25px;
+		height: 15px;
+		top: 14px;
+		left: 12px;
+		border-left: 4px solid $green;
+		border-bottom: 4px solid $green;
+
+		@include rotate(-45deg);
+		
+		@include transition(all, 0.25s);
+
+		@include medium-up{
+			width: 33px;
+			height: 20px;
+			top: 20px;
+			left: 16px;
+			border-left-width: 5px;
+			border-bottom-width: 5px;
+		}
+	}
+}
+
+.icon-error{
+	&:before,
+	&:after{
+		width: 28px;
+		height: 4px;
+		top: 22px;
+		left: 10px;
+		background-color: $red;
+
+		@include transition(all, 0.25s);
+
+		@include medium-up{
+			width: 35px;
+			height: 5px;
+			top: 30px;
+			left: 15px;
+		}
+	}
+
+	&:before{
+		@include rotate(-45deg);
+	}
+	&:after{
+		@include rotate(45deg);
+	}
 }
