--- a/sass/_stylish-select.scss
+++ b/sass/_stylish-select.scss
@@ -299,16 +299,15 @@
 			padding: 0.375rem 1rem;
 			font-size: 1rem;
 			color: #333;
-			background-color: #fff;
-			border-bottom: 1px solid #ddd;
+			background-color: #eee;
 			text-transform: inherit;
-
-			&:hover{
-				background-color: #f5f5f5;
-			}
+			border-bottom: 1px solid #e5e5e5;
 
 			&.hiLite{
-				background-color: #f5f5f5;
+				background-color: #e5e5e5;
+			}
+			&.newListHover{
+				background-color: #e1e1e1;
 			}
 		}
 	}
@@ -366,6 +365,7 @@
 		}
 
 		a{
+			background-color: #eee;
 			color: #333;
 			padding: 0 1rem;
 			border-bottom: 1px solid #e5e5e5;
